    https://arxiv.org/abs/1811.02300
  (Gabriel Scherer and Rodolphe Lepigre,
   review by Jeremy Yallop, Damien Doligez and Frédéric Bour)

- #1154, #1706: spellchecker hints and type-directed disambiguation
  for extensible sum type constructors
  (Florian Angeletti, review by Alain Frisch, Gabriel Radanne, Gabriel Scherer
  and Leo White)


### Runtime system:

- #9119: Make [caml_stat_resize_noexc] compatible with the [realloc]
  API when the old block is NULL.
  (Jacques-Henri Jourdan, review by Xavier Leroy)

- #8920, #9238, #9239, #9254: New API for statistical memory profiling in
  Memprof.Gc. The new version does no longer use ephemerons and allows
  registering callbacks for promotion and deallocation of memory
  blocks.
  The new API no longer gives the block tags to the allocation callback.
  (Stephen Dolan and Jacques-Henri Jourdan, review by Damien Doligez
   and Gabriel Scherer)

- #9233: Restore the bytecode stack after an allocation.
  (Stephen Dolan, review by Gabriel Scherer and Jacques-Henri Jourdan)

- #9230, #9362: Memprof support for native allocations.
  (Jacques-Henri Jourdan and Stephen Dolan, review by Gabriel Scherer)

- #9249: restore definition of ARCH_ALIGN_INT64 in m.h if the architecture
  requires 64-bit integers to be double-word aligned (autoconf regression)
  (David Allsopp, review by Sébastien Hinderer)

- #9259: Made `Ephemeron.blit_key` and `Weak.blit` faster. They are now
  linear in the size of the range being copied instead of depending on the
  total sizes of the ephemerons or weak arrays involved.
  (Arseniy Alekseyev, design advice by Leo White, review by François Bobot
  and Damien Doligez)

- #9279: Memprof optimisation.
  (Stephen Dolan, review by Jacques-Henri Jourdan)

- #9280: Micro-optimise allocations on amd64 to save a register.
  (Stephen Dolan, review by Xavier Leroy)

- #9316, #9443, #9463: Use typing information from Clambda
  for mutable Cmm variables.