@@ -27,16 +27,11 @@
 
 #include <stddef.h>
 #include <stdlib.h>
-#include <stdio.h>
 #include <stdarg.h>
 
 /* Basic types and constants */
 
 typedef size_t asize_t;
-
-#ifndef NULL
-#define NULL 0
-#endif
 
 #if defined(__GNUC__) || defined(__clang__)
   /* Supported since at least GCC 3.1 */
